--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
+    "lodash.debounce": "^4.0.8",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
